--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Skatememo13!",
+    "password": "sua_Senha_Aqui",
     "database": "mydb",
     "host": "127.0.0.1",
     "dialect": "mysql"
